CHANGES IN VERSION 1.51.1
-------------------------

NEW FEATURES

    o new 'header=TRUE' in `seqGDS2VCF()` to specify whether exporting the
      metadata header to a VCF file or not


CHANGES IN VERSION 1.50.1
-------------------------

UTILITIES

    o Reduce memory usage in `seqMerge()` when there are many INFO variables


CHANGES IN VERSION 1.50.0
-------------------------

NEW FEATURES

    o new '.status_file' & '.proc_time' in `seqParallel()` for controlling
      the display of the status of child processes

    o enhance workload balancing within `seqParallel()`

    o new 'balancing=NA' in `seqAlleleFreq()`, `seqAlleleCount()`,
      `seqGetAF_AC_Missing()`, `seqSetFilterCond()`, `seqUnitFilterCond()`
      (using workload balancing by default)

    o new '.balancing' in `seqApply()` and `seqBlockApply()`

    o new 'alt' & 'ns' in `seqGetAF_AC_Missing()`

    o new 'dosage' in `seqExampleFileName()`

UTILITIES

    o `seqDigest()` allows a GDS file name in the first argument

    o a new option 'parallel' in `seqDigest()`

    o `seqVCF2GDS()` and `seqBED2GDS()`: save the gds node 'chromosome'
      before 'position'

    o `seqAddValue(, varnm="annotation/filter", desp=...)` adds 'Description'
      via the argument 'desp'

    o tweak the display of `seqGDS2BED()`

    o `seqBlockApply()` and `seqApply()` allows a GDS file name in the first
      argument

    o `seqGDS2VCF()` generates an indexing file (.tbi) according to the
      vcf.gz output file, requiring the Rsamtools package

    o the first argument of `seqOptimize()` can be a SeqVarGDSClass object

BUG FIXES

    o Previous `seqGetAF_AC_Missing(, minor=FALSE)` returns the AF for the
      alt. alleles and the AC for the ref. alleles, when a dosage GDS file is
      used; a new 'alt' is used to specify the ref. or alt. alleles.

    o Fix '##INFO=<>' in the output of `seqGDS2VCF()` when the INFO variable is
      added by users


CHANGES IN VERSION 1.48.0
-------------------------
